force-app/main/default/objects/Applicant__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Provincias__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Buzios</fullName>
            </value>
            <value>
                <fullName>Ciudad de la paz</fullName>
            </value>
            <value>
                <fullName>Ciudad de lima</fullName>
            </value>
            <value>
                <fullName>Cochabamba</fullName>
            </value>
            <value>
                <fullName>Godoy Cruz</fullName>
            </value>
            <value>
                <fullName>Luque</fullName>
            </value>
            <value>
                <fullName>Punta del este</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>