force-app/main/default/objects/Applicant__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <inlineHelpText>Campo en el cual el aplciante menciona porque esta interesado en esta posicion.</inlineHelpText>
    <label>Descripcion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>