force-app/main/default/objects/Applicant__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&quot;Ingrese su correo.&quot;</defaultValue>
    <label>Email</label>
    <type>Email</type>
</CustomField>