force-app/main/default/objects/Applicant__c/fields/Foto__c.field-meta.xml
<CustomField>
    <fullName>Foto__c</fullName>
    <inlineHelpText>Ingrese una imagen suya formal. Superior a 500dpi.</inlineHelpText>
    <label>Foto</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>