force-app/main/default/objects/Applicant__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>Pais</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Brasi</fullName>
            </value>
            <value>
                <fullName>Paraguay</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
            <value>
                <fullName>Uruguay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>