force-app/main/default/objects/Applicant__c/fields/Provincias__c.field-meta.xml
<CustomField>
    <fullName>Provincias__c</fullName>
    <label>Provincias</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pais__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aguas Corrientes</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Cochabamba</fullName>
            </value>
            <value>
                <fullName>Consepcion</fullName>
            </value>
            <value>
                <fullName>Cordillera</fullName>
            </value>
            <value>
                <fullName>Cordoba</fullName>
            </value>
            <value>
                <fullName>Corrientes</fullName>
            </value>
            <value>
                <fullName>Cusco</fullName>
            </value>
            <value>
                <fullName>Departamento del Salto</fullName>
            </value>
            <value>
                <fullName>Departamento de Rocha</fullName>
            </value>
            <value>
                <fullName>Florianopolis</fullName>
            </value>
            <value>
                <fullName>Fortaleza</fullName>
            </value>
            <value>
                <fullName>Ica</fullName>
            </value>
            <value>
                <fullName>Itapoa</fullName>
            </value>
            <value>
                <fullName>Jose Pedro Varela</fullName>
            </value>
            <value>
                <fullName>Junin</fullName>
            </value>
            <value>
                <fullName>La libertad</fullName>
            </value>
            <value>
                <fullName>La Paz</fullName>
            </value>
            <value>
                <fullName>Lima</fullName>
            </value>
            <value>
                <fullName>Manaos</fullName>
            </value>
            <value>
                <fullName>Mendoza</fullName>
            </value>
            <value>
                <fullName>Misiones</fullName>
            </value>
            <value>
                <fullName>Montevideo</fullName>
            </value>
            <value>
                <fullName>Pando</fullName>
            </value>
            <value>
                <fullName>Potosi</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro</fullName>
            </value>
            <value>
                <fullName>San Luis</fullName>
            </value>
            <value>
                <fullName>San Perdro</fullName>
            </value>
            <value>
                <fullName>Santa Cruz</fullName>
            </value>
            <value>
                <fullName>Sao Pablo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>